manifests/ingress/postgres-tcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: postgres-tcp
  namespace: db
spec:
  entryPoints:
    - postgres
  routes:
    - match: HostSNI(`*`)  # 모든 호스트 허용
      services:
        - name: postgres-postgresql
          port: 5432
